--- a/docs/revision.asciidoc
+++ b/docs/revision.asciidoc
@@ -1,3 +1,3 @@
-:revdate:       2015-03-26
-:revnumber:     1.0.0-RC2
-:stablePubDate: Marth 26, 2015
+:revdate:       2015-04-02
+:revnumber:     1.0.0
+:stablePubDate: April 2, 2015
