stable version 3.0 of php-reflect is already available

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -31,7 +31,7 @@ Install composer dependencies
 [source,bash]
 ----
 $ cd umlwriter
-$ php composer.phar require bartlett/php-reflect 3.0.0-RC1
+$ php composer.phar require bartlett/php-reflect ~3.0
 ----
 
 Or
