update doc landing page

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -14,8 +14,10 @@ Follow development on the http://php5.laurent-laville.org/umlwriter/blog/[offici
 
 You can either :
 
-* download the phar version http://bartlett.laurent-laville.org/get/umlwriter-1.2.0.phar[1.2.0]
-* install via https://packagist.org/packages/bartlett/umlwriter/[packagist] the current source dev-master or the stable version 1.2.0
+* download the phar version http://bartlett.laurent-laville.org/get/umlwriter-1.2.1.phar[1.2.1] 
+that has all required (as well as some optional) dependencies of UmlWriter bundled in a single file.
+
+* install latest version with composer, as follow: `composer require bartlett/umlwriter ^1.2`
 
 == Documentation
 
