--- a/.changes/3.3.0.md
+++ b/.changes/3.3.0.md
@@ -9,3 +9,5 @@
 ### Removed
 
 - Drop support for Symfony 4 and allow Symfony 6 support
+
+**Full Changelog**: [3.2.1...3.3.0](https://github.com/llaville/umlwriter/compare/3.2.1...3.3.0)
